# fi

./: .env.example  Cargo.toml  README.md
migrations/2020-10-07-215646_create_accounts_table/: up.sql
migrations/2020-10-08-160054_alter_accounts_id_type/: up.sql
migrations/2020-10-08-160607_alter_accounts_set_not_null/: up.sql
migrations/2020-10-08-162129_create_snapshots_table/: up.sql
migrations/2020-10-09-095920_snapshots_constraints/: up.sql
src/: account.rs  cli.rs  currency.rs  lib.rs  main.rs  models.rs  schema.rs  snapshot.rs
