[package]
name = "fi"
version = "0.1.0"
authors = ["Makoto Dejima <makotodejima@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
structopt = "0.3"
termion = "*"
textplots = "0.5"