[package]
name = "fi-cli"
version = "0.1.0"
authors = ["Makoto Dejima <makotodejima@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A command line tool for personal finance"
readme = "README.md"
homepage = "https://github.com/makotodejima/fi"
repository = "https://github.com/makotodejima/fi"
keywords = ["cli", "finance"]
categories = ["command-line-utilities"]
exclude = ["assets/*"]

[dependencies]
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
structopt = "0.3"
termion = "*"
textplots = "0.5"